syntax = "proto3";

package subscription;

option go_package = "./proto";

service SubscriptionService {
  // 获取用户活动订阅计划
  rpc GetActivePlanListByUserId(GetActivePlanListByUserIdRequest) returns (GetActivePlanListByUserIdResponse);

  // 提交新订单
  rpc CommitNewOrder(CommitNewOrderRequest) returns (CommitNewOrderResponse);

  // 获取用户订单
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);

  rpc GetAllPlanKeyName(GetAllPlanKeyNameRequest) returns (GetAllPlanKeyNameResponse);

  rpc GetAllPlans(GetAllPlansRequest) returns (GetAllPlansResponse);

  rpc AddNewPlan(AddNewPlanRequest) returns (AddNewPlanResponse);

  rpc UpdatePlan(UpdatePlanRequest) returns (UpdatePlanResponse);

  rpc DeletePlan(DeletePlanRequest) returns (DeletePlanResponse);

  rpc UpdatePlanIsSale(UpdatePlanIsSaleRequest) returns (UpdatePlanIsSaleResponse);

  rpc UpdatePlanRenew(UpdatePlanRenewRequest) returns (UpdatePlanRenewResponse);

//  // 密钥使用记录
//  rpc BindOrActiveMyKey2App(BindOrActiveMyKey2AppRequest) returns (BindOrActiveMyKey2AppResponse);
//  rpc UnbindKey(UnbindKeyRequest) returns (UnbindKeyResponse);
//  rpc CheckAccountAndKeyUsability(CheckAccountAndKeyUsabilityRequest) returns (CheckAccountAndKeyUsabilityResponse);
//
//  rpc GetActivateLogByUserId(GetActivateLogByUserIdRequest) returns (GetActivateLogByUserIdResponse);
//  rpc GetActivateLogByAdmin(GetActivateLogByAdminRequest) returns (GetActivateLogByAdminResponse);
}

message GetAllPlanKeyNameRequest {

}

//message PlanKV {
//  int64 id = 1;
//  string name = 2;
//  bool is_sale = 3;
//}

message GetAllPlanKeyNameResponse {
  int64 code = 1;
  string msg = 2;
//  repeated PlanKV plans = 3;
  bytes plans = 3;
}

message GetActivePlanListByUserIdRequest {
  int64 user_id = 1;  // 用户 ID
}

message PlanInfo {
  string plan_name = 1;         // 订阅计划名称
  string expiration_date = 2;   // 到期日期
}

message GetActivePlanListByUserIdResponse {
  int32 code = 1;                // 状态码
//  repeated PlanInfo my_plans = 2;  // 用户的活动订阅计划
  bytes my_plans = 2;  // 用户的活动订阅计划
  string msg = 3;                // 消息
}

message CommitNewOrderRequest {
  int64 user_id = 1;    // 用户 ID
  int64 plan_id = 2;    // 订阅计划 ID
  string period = 3;    // 付款周期 (month, quarter, half-year, year)
  int64 coupon_id = 4;  // 优惠券 ID (未使用则为 0)
}

message CommitNewOrderResponse {
  int32 code = 1;            // 状态码
  int64 order_id = 2;        // 订单 ID
  string plan_name = 3;      // 订阅计划名称
  float original_price = 4;  // 原始价格
  float discount_amount = 5; // 抵折金额
  float pay_price = 6;       // 最终应付金额
  string period = 7;         // 付款周期
  string created_at = 8;     // 订单创建时间
  string msg = 9;            // 消息
}


message OrderInfo {
  int64 id = 1;             // 订单 ID
  int64 user_id = 2;        // 用户 ID
  string email = 3;         // 用户邮箱
  int64 plan_id = 4;        // 订阅计划 ID
  string payment_method = 5; // 支付方式
  string period = 6;        // 订阅周期
  int64 coupon_id = 7;      // 优惠券 ID
  int64 status = 8;         // 订单状态
  bool is_success = 9;      // 支付是否成功
  string failure_reason = 10; // 支付失败原因
  float discount_amount = 11; // 抵折金额
  float amount = 12;        // 订单金额
  string paid_at = 13;      // 支付时间
  string created_at = 14;   // 创建时间
  string updated_at = 15;   // 更新时间
}

message GetOrdersRequest {
  string user_id = 1;  // 用户 ID
}

message GetOrdersResponse {
  int32 code = 1;              // 状态码
//  repeated OrderInfo order_list = 2; // 订单列表
  bytes order_list = 2; // 订单列表
  string msg = 3;              // 消息
}

// -------------------------

// 订阅计划结构体
message Plan {
  int64 id = 1;              // 订阅计划ID
  int64 group_id = 2;        // 群组Id
  string name = 3;           // 订阅名称
  bool is_sale = 4;          // 启用销售
  bool is_renew = 5;         // 是否允许续费
  int64 capacity_limit = 6;  // 最大用户数量限制
  int64 residue = 7;         // 剩余订阅数量
  string describe = 8;       // 订阅计划备注
  double month_price = 9;    // 月付价格
  double quarter_price = 10; // 季付价格
  double half_year_price = 11; // 半年付价格
  double year_price = 12;    // 年付价格
  int64 sort = 13;           // 排序顺序
  string created_at = 14;    // 创建时间
  string updated_at = 15;    // 更新时间
  string deleted_at = 16;    // 删除时间
}
// 获取订阅列表的请求和响应
message GetAllPlansRequest {
  bool is_user = 1;
  int64 page = 2;
  int64 size = 3;
}


message GetAllPlansResponse {
  int32 code = 1;
  string msg = 2;
//  repeated Plan plans = 3;
  bytes plans = 3;
  int64 page_count = 4;
}

// 添加订阅计划的请求和响应
message AddNewPlanRequest {
  string name = 1;
  string describe = 2;
  bool is_sale = 3;
  bool is_renew = 4;
  int64 group_id = 5;
  int64 capacity_limit = 6;
  int64 residue = 7;
  double month_price = 8;
  double quarter_price = 9;
  double half_year_price = 10;
  double year_price = 11;
  int64 sort = 12;
}

message AddNewPlanResponse {
  int32 code = 1;
  string msg = 2;
}

// ----------------------

message UpdatePlanRequest {
  int64 id = 1;
  string name = 2;
  string describe = 3;
  bool is_sale = 4;
  bool is_renew = 5;
  int64 group_id = 6;
  int64 capacity_limit = 7;
  int64 residue = 8;
  double month_price = 9;
  double quarter_price = 10;
  double half_year_price = 11;
  double year_price = 12;
  int64 sort = 13;
}

message UpdatePlanResponse {
  int32 code = 1;
  string msg = 2;
}

// -------------------------

message DeletePlanRequest {
  int64 plan_id = 1;
}

message DeletePlanResponse {
  int32 code = 1;
  string msg = 2;
}

// -------------------------

message UpdatePlanIsSaleRequest {
  int64 id = 1;
  bool is_sale = 2;
}

message UpdatePlanIsSaleResponse {
  int32 code = 1;
  string msg = 2;
}

// -----------

message UpdatePlanRenewRequest {
  int64 id = 1;
  bool is_renew = 2;
}

message UpdatePlanRenewResponse {
  int32 code = 1;
  string msg = 2;
}

//

//message BindOrActiveMyKey2AppRequest {
//  int64 user_id = 1; // 用戶id
//  string email = 2; // 用户邮箱
//  string password = 3;  // 密码
//  string key = 4; // 密钥key
//  int64 request_at = 5; // 时间戳
//  string client_version = 6;  // 客户端版本
//  string os_type = 7; // 操作系统类型
//}
//
//message BindOrActiveMyKey2AppResponse {
//  int32 code = 1;
//  string msg = 2;
//  string significant_number = 3;
//}
//
//message UnbindKeyRequest {
//  int64 record_id = 1;
//}
//
//message UnbindKeyResponse {
//  int32 code = 1;
//  string msg = 2;
//  bool finished = 3;
//}
//
//message CheckAccountAndKeyUsabilityRequest {
//  string email = 1; // 用户邮箱
//  string key = 3; // 密钥key
//}
//
//message CheckAccountAndKeyUsabilityResponse {
//  int32 code = 1;
//  string msg = 2;
//  bool passed = 3;
//}
//
//message GetActivateLogByUserIdRequest {
//  int64 user_id = 1;
//  int64 page = 2;
//  int64 size = 3;
//}
//
//message GetActivateLogByUserIdResponse {
//  int32 code = 1;
//  string msg = 2;
//  bytes log = 3;
//  int64 page_count = 4;
//}
//
//message GetActivateLogByAdminRequest {
//  int64 page = 1;
//  int64 size = 2;
//}
//
//message GetActivateLogByAdminResponse {
//  int32 code = 1;
//  string msg = 2;
//  bytes log = 3;
//  int64 page_count = 4;
//}